# srli

./: .gitignore  LICENSE.txt  README.md  run_tests.py  setup.cfg
crli/: inference.py  relation.py
crli/inference/: __init__.py  mln.py  psl.py
src/srli/: evaluation.py  parser.py  pipeline.py  relation.py  rule.py  util.py
src/srli/engine/: __init__.py  base.py  random.py
src/srli/engine/logic/: dws.py
src/srli/engine/mln/: base.py  native.py  pysat.py
src/srli/engine/problog/: base.py  engine.py  noncollective.py
src/srli/engine/psl/: engine.py
src/srli/engine/tuffy/: docker.py
src/srli/engine/tuffy/lib/: Dockerfile  init-tuffy.sh  run-tuffy.sh
srli/: engine.py  grounding.py  parser.py  pipeline.py  relation.py  util.py
srli/engine/: base.py
srli/engine/mln/: __init__.py  base.py  native.py
srli/engine/psl/: __init__.py  engine.py
srli/engine/tuffy/: docker.py
srli/engine/tuffy/lib/: Dockerfile
srli/inference/: __init__.py  mln.py  problog.py  psl.py  tuffy.py
srli/lib/tuffy/: run-tuffy.sh
tests/: base.py  test_model.py  test_models.py
tests/data/: base.py
tests/data/simpleacquaintances/: model.py
tests/data/smokers/: model.py
tests/data/smokers/data/: cancer_targets.txt  cancer_truth.txt  friends_obs.txt  smokes_obs.txt  smokes_targets.txt  smokes_truth.txt
