[metadata]

name = crli
version = 0.0.1
url = https://github.com/eriq-augustine/crli
keywords = SRL ML PSL MLN

author = Eriq Augustine
author_email = eaugusti@ucsc.edu

description = A common interface for statistical relational learning
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]

packages = find:
python_requires = >=3.5
